# screenmcp

./: .gitignore  CLAUDE.md  LICENSE  PRIVACY.md  README.md  adding-new-command.md  architecture.md  commands.md  docker-compose.yml  implementations.md  initiation-protocol.md  play-audio-research.md  protocol.md  release.py  selector-script-features.md  settings.gradle.kts  start-server.sh  start-tunnels.bat  test.bat
.github/workflows/: release.yml
android/: build-local-release.sh
android/app/: build.gradle.kts  google-services.json
android/app/src/main/java/com/doodkin/screenmcp/: AppLog.kt  ConnectionService.kt  FcmService.kt  LoginActivity.kt  MainActivity.kt  ScreenMcpService.kt  SseService.kt  WebSocketClient.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/layout/: activity_login.xml  activity_main.xml
android/app/src/main/res/values/: strings.xml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/doodkin/screenmcp/: ConnectionService.kt  FcmService.kt  LoginActivity.kt  MainActivity.kt  ScreenMcpService.kt  ScreenshotManager.kt  WebSocketClient.kt
app/src/main/java/com/phonemcp/app/: ConnectionService.kt  FcmService.kt  LoginActivity.kt  MainActivity.kt  PhoneMcpService.kt  ScreenshotManager.kt  WebSocketClient.kt
app/src/main/res/layout/: activity_login.xml  activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: accessibility_service_config.xml
docs/: adding-new-command.md  architecture.md  cross-device-standardization.md  return-value-windows-ui-tree.md  testing.md  versioning.md  wire-protocol.md
fake-device/: README.md  pyproject.toml  run_tests.sh  test_with_sdk.py
fake-device/src/fake_device/: __init__.py  __main__.py  client.py  commands.py  config.py  test_modes.py
fake-device/src/fake_device.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ios/: README.md
ios-not-availible/ScreenMCP/ScreenMCP/: ScreenMCPApp.swift
ios-not-availible/ScreenMCP/ScreenMCP/Models/: Command.swift
ios-not-availible/ScreenMCP/ScreenMCP/Resources/: Info.plist
ios-not-availible/ScreenMCP/ScreenMCP/Services/: SettingsManager.swift
ios-not-availible/ScreenMCP/ScreenMCP/Views/: ContentView.swift  SettingsView.swift
ios/PhoneMCP/PhoneMCP/: PhoneMCPApp.swift
ios/PhoneMCP/PhoneMCP.xcodeproj/: project.pbxproj
ios/PhoneMCP/PhoneMCP/Models/: Command.swift  ConnectionState.swift
ios/PhoneMCP/PhoneMCP/Resources/: Info.plist
ios/PhoneMCP/PhoneMCP/Services/: CommandHandler.swift  SettingsManager.swift  WebSocketService.swift
ios/PhoneMCP/PhoneMCP/Views/: ContentView.swift  SettingsView.swift
ios/ScreenMCP/ScreenMCP.xcodeproj/: project.pbxproj
ios/ScreenMCP/ScreenMCP/Services/: CommandHandler.swift  WebSocketService.swift
ios/ScreenMCP/ScreenMCP/Views/: SettingsView.swift
linux/: Cargo.toml  README.md  build.sh  screenmcp.desktop
linux/src/: commands.rs  config.rs  main.rs  sse.rs  test_window.rs  tray.rs  ws.rs
mac/: CROSS-COMPILE.md  Cargo.toml  Info.plist  README.md  build.sh
mac/src/: commands.rs  config.rs  login_window.rs  main.rs  tray.rs  ws.rs
mcp-server/: Dockerfile  package-lock.json  package.json
mcp-server/src/: mcp.ts  server.ts
mcp-server/src/lib/: config.ts  phone-connection.ts
pc/: Cargo.toml
pc/src/: commands.rs  config.rs  main.rs  tray.rs
remote/: package-lock.json  package.json  tsconfig.json
remote/src/: cli.ts  client.ts  index.ts  protocol.ts
sdk/python/: README.md  deploy.sh  pyproject.toml
sdk/python/src/phonemcp/: __init__.py  client.py  types.py
sdk/python/src/screenmcp/: __init__.py  client.py  selector.py  types.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/examples/: test_fake_device.rs
sdk/rust/src/: client.rs  error.rs  lib.rs  types.rs
sdk/typescript/: README.md  SELECTORS.md  deploy.sh  package-lock.json  package.json  tsconfig.json
sdk/typescript/examples/cli/: cli.ts  commands.md  package-lock.json  package.json  test_fake_device.ts  tsconfig.json
sdk/typescript/src/: client.ts  index.ts  selector.ts  steps.ts  types.ts
skill/: .mcp.json  FOCUS_COACH_SKILL.md  README.md  SKILL.md  phonemcp_agent.py  requirements.txt  screenmcp_agent.py
skill/scripts/: speak.py
tools/: README.md  package-lock.json  package.json  timing.mjs
ui/: connection.md  desktop-window.md  login.md  main.md
windows/: Cargo.toml  build-installer.sh  build.rs  installer.nsi  vendor-deps.sh
windows/src/: auth.rs  commands.rs  config.rs  main.rs  sse.rs  test_window.rs  tray.rs  ws.rs
worker/: Cargo.toml  Dockerfile
worker/src/: connections.rs  db.rs  file_auth.rs  file_state.rs  ip_whitelist.rs  lib.rs  main.rs  protocol.rs  state.rs  ws.rs
worker/src/backend/: file_auth.rs  file_state.rs  mod.rs
