[package]
name = "screenmcp-linux"
version = "0.1.0"
edition = "2021"
description = "ScreenMCP Linux client - desktop control via system tray"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tray-icon = "0.19"
eframe = { version = "0.33", default-features = false, features = ["glow", "default_fonts", "x11", "wayland"] }
regex = "1"
screenshots = "0.8"
enigo = { version = "0.2", features = ["serde"] }
base64 = "0.22"
image = { version = "0.25", features = ["png", "webp", "ico"] }
arboard = "3"
dirs = "5"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "native-tls"] }
futures-util = "0.3"
url = "2"
open = "5"
getrandom = "0.2"
hostname = "0.4"
nokhwa = { version = "0.10", features = ["input-v4l"] }
rodio = "0.19"
