[package]
name = "screenmcp-mac"
version = "0.1.0"
edition = "2021"
description = "ScreenMCP Mac client - desktop control via menu bar icon"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tray-icon = "0.19"
eframe = { version = "0.33", default-features = false, features = ["glow", "default_fonts"] }
regex = "1"
screenshots = "0.8"
enigo = { version = "0.2", features = ["serde"] }
base64 = "0.22"
image = { version = "0.25", features = ["png", "webp", "ico"] }
arboard = "3"
dirs = "5"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "native-tls", "stream"] }
futures-util = "0.3"
url = "2"
open = "5"
getrandom = "0.2"
hostname = "0.4"
nokhwa = { version = "0.10", features = ["input-avfoundation"] }
rodio = { version = "0.19", default-features = false, features = ["wav", "mp3"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSString", "NSArray", "NSDictionary"] }
objc2-app-kit = { version = "0.2", features = [
    "NSWorkspace",
    "NSRunningApplication",
    "NSApplication",
] }
