[package]
name = "screenmcp-windows"
version = "0.1.0"
edition = "2021"
description = "ScreenMCP Windows client - desktop control via system tray"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tray-icon = "0.19"
winit = { version = "0.30", features = ["rwh_06"] }
screenshots = "0.8"
enigo = { version = "0.2", features = ["serde"] }
base64 = "0.22"
image = { version = "0.25", features = ["png", "webp"] }
arboard = "3"
dirs = "5"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "native-tls", "stream"] }
futures-util = "0.3"
url = "2"
open = "5"
getrandom = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_Graphics_Gdi",
] }
