[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phonemcp"
version = "0.1.0"
description = "Python SDK for PhoneMCP — control Android phones programmatically"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "PhoneMCP Team" },
]
keywords = ["phone", "automation", "android", "mcp", "remote-control"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
]
dependencies = [
    "websockets>=12.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/phonemcp/phonemcp"
Repository = "https://github.com/phonemcp/phonemcp"

[tool.hatch.build.targets.wheel]
packages = ["src/phonemcp"]
