[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "screenmcp"
version = "0.2.0"
description = "Python SDK for ScreenMCP — control Android phones programmatically"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "ScreenMCP Team" },
]
keywords = ["phone", "automation", "android", "mcp", "remote-control"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
]
dependencies = [
    "websockets>=12.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/shimondoodkin/screenmcp"
Repository = "https://github.com/shimondoodkin/screenmcp"

[tool.hatch.build.targets.wheel]
packages = ["src/screenmcp"]
