[package]
name = "screenmcp"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for ScreenMCP — control phones and desktops programmatically"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
futures-util = "0.3"
